# robit_intern_Changseok

./: LICENSE  README.md
C++&Qt/C++&Qt_project/C++&QT_Project_package/: CMakeLists.txt
C++&Qt/C++&Qt_project/C++&QT_Project_package/include/: mainwindow.h
C++&Qt/C++&Qt_project/C++&QT_Project_package/src/: mainwindow.cpp
C++&Qt/C++&Qt_project/C++&QT_Project_package/ui/: mainwindow.ui
C++&Qt/day3/hw_1/hw_1_package/include/: mainwindow.h  mainwindow.h.autosave
C++&Qt/day3/hw_1/hw_1_package/src/: main.cpp  mainwindow.cpp
C++&Qt/day3/hw_1/hw_1_package/ui/: mainwindow.ui
C++&Qt/day3/hw_3/hw_3_package/: CMakeLists.txt
C++&Qt/day3/hw_3/hw_3_package/include/: mainwindow.h
C++&Qt/day3/hw_3/hw_3_package/src/: main.cpp  mainwindow.cpp
C++&Qt/day3/hw_3/hw_3_package/ui/: mainwindow.ui
C++&Qt/day4/hw1/hw1_package/: CMakeLists.txt
C++&Qt/day4/hw1/hw1_package/src/: main.cpp
C++&Qt/day4/hw1/hw1_package/ui/: mNetAssistWidget.ui
Linux/day2/hw_1/: CMakeLists.txt
Linux/day2/hw_1/include_1/hw_1/: head.hpp
Linux/day2/hw_1/src/: main.cpp
Linux/day2/hw_2/: CMakeLists.txt
Linux/day2/hw_2/include/: Head.hpp
Linux/day2/hw_2/src/: main.cpp
Linux/day2/hw_3/include/: HEAD.hpp
Linux/day3/hw_1/hw_1_package/: CMakeLists.txt
Linux/day3/hw_1/hw_1_package/include/: mainwindow.h
Linux/day3/hw_1/hw_1_package/src/: main.cpp  mainwindow.cpp
Linux/day3/hw_1/hw_1_package/ui/: mainwindow.ui
Linux/day3/hw_2/hw_2_package/include/: mainwindow.h
Linux/day3/hw_2/hw_2_package/src/: main.cpp  main.cpp.autosave  mainwindow.cpp
Linux/day3/hw_2/hw_2_package/ui/: mainwindow.ui
ROS2/day1/hw2/hw2_package/hw2-cpp/: CMakeLists.txt  package.xml
ROS2/day1/hw2/hw2_package/hw2-cpp/include/: my_node.hpp
ROS2/day1/hw2/hw2_package/hw2-cpp/src/: my_cpp_node.cpp  my_cpp_node1.cpp
ROS2/day1/hw2/hw2_package/hw2_2-python/: package.xml  setup.cfg  setup.py
ROS2/day1/hw2/hw2_package/hw2_2-python/hw2_2/: myrclpy.py
ROS2/day1/hw2/hw2_package/hw2_2-python/install/: local_setup.sh  setup.sh
ROS2/day1/hw2/hw2_package/hw2_2-python/install/hw2_2/share/hw2_2/: package.bash  package.xml  package.zsh
ROS2/day1/hw3/hw3_package/: myrclpy.py
ROS2/day2/hw1/hw1_package/hw1/: CMakeLists.txt  package.xml
ROS2/day2/hw1/hw1_package/hw1/include/: my_node.hpp
ROS2/day2/hw1/hw1_package/hw1/src/: my_cpp_node.cpp  my_cpp_node1.cpp
ROS2/day2/hw2/hw2_package/: CMakeLists.txt  package.xml
ROS2/day2/hw2/hw2_package/include/hw2/: main_window.hpp  qnode.hpp
ROS2/day2/hw2/hw2_package/install/: local_setup.sh  setup.sh
ROS2/day2/hw2/hw2_package/install/hw2/lib/hw2/: hw2_node
ROS2/day2/hw2/hw2_package/install/hw2/share/hw2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2/day2/hw2/hw2_package/install/hw2/share/hw2/cmake/: hw2Config.cmake
ROS2/day2/hw2/hw2_package/install/ros2_create_qt_pkg/lib/ros2_create_qt_pkg/: ros2_create_qt_pkg_node  subscriber_node
ROS2/day2/hw2/hw2_package/install/ros2_create_qt_pkg/share/ros2_create_qt_pkg/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/day2/hw2/hw2_package/install/ros2_create_qt_pkg/share/ros2_create_qt_pkg/cmake/: ros2_create_qt_pkgConfig.cmake
ROS2/day2/hw2/hw2_package/src/: main.cpp  main_window.cpp  qnode.cpp
ROS2/day2/hw2/hw2_package/ui/: mainwindow.ui
ROS2/day2/hw3/hw3_package/: CMakeLists.txt
ROS2/day2/hw3/hw3_package/include/ros2_create_qt_pkg/: main_window.hpp  qnode.hpp
ROS2/day2/hw3/hw3_package/install/: local_setup.sh  setup.sh
ROS2/day2/hw3/hw3_package/install/ros2_create_qt_pkg/lib/ros2_create_qt_pkg/: subscriber_node
ROS2/day2/hw3/hw3_package/install/ros2_create_qt_pkg/share/ros2_create_qt_pkg/: local_setup.sh  package.bash  package.sh
ROS2/day2/hw3/hw3_package/src/: main.cpp  main_window.cpp  qnode.cpp  subs.cpp
ROS2/day2/hw3/hw3_package/ui/: mainwindow.ui
ROS2/day2/hw4/hw4_package/: CMakeLists.txt  package.xml
ROS2/day2/hw4/hw4_package/include/hw4/: main_window.hpp  qnode.hpp
ROS2/day2/hw4/hw4_package/install/: local_setup.sh
ROS2/day2/hw4/hw4_package/install/hw4/share/hw4/: local_setup.sh  package.dsv  package.ps1
ROS2/day2/hw4/hw4_package/src/: main.cpp  main_window.cpp  publish.cpp  qnode.cpp
ROS2/day3/hw1/hw1_package/: cpp_param.cpp  my_node.hpp
ROS2/day3/hw2/hw2_package/: Ros2_day3.yaml
ROS2/day3/hw2/hw2_package/hw2-1/: Ros2_day3.yaml  package.xml  setup.cfg  setup.py
ROS2/day3/hw2/hw2_package/hw2-1/hw2_2/: myrclpy1.py
ROS2/day3/hw2/hw2_package/hw2-1/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/day3/hw2/hw2_package/hw2-1/install/hw2_2/lib/hw2_2/: myrclpy1_node  myrclpy_node
ROS2/day3/hw2/hw2_package/hw2-1/install/hw2_2/share/hw2_2/: package.dsv  package.ps1  package.sh
ROS2/day3/hw2/hw2_package/hw2-2/: CMakeLists.txt  main_window.cpp
ROS2/day3/hw2/hw2_package/hw2-2/include/hw4/: main_window.hpp  qnode.hpp
ROS2/day3/hw2/hw2_package/hw2-2/install/: setup.sh
ROS2/day3/hw2/hw2_package/hw2-2/install/hw4/share/hw4/: package.sh  package.zsh
ROS2/day3/hw2/hw2_package/hw2-2/install/hw4/share/hw4/config/: params.yaml
ROS2/day3/hw2/hw2_package/hw2-2/src/: main.cpp  publish.cpp
ROS2/day3/hw2/hw2_package/hw2-2/ui/: mainwindow.ui
ROS2/day4/hw1/hw1_package/: CMakeLists.txt
ROS2/day4/hw1/hw1_package/include/simple_lifecycle_pkg/: lifecycle.hpp
ROS2/day4/hw1/hw1_package/install/: local_setup.sh  setup.sh
ROS2/day4/hw1/hw1_package/install/simple_lifecycle_pkg/include/simple_lifecycle_pkg/: lifecycle.hpp
ROS2/day4/hw1/hw1_package/install/simple_lifecycle_pkg/lib/simple_lifecycle_pkg/: lifecycle_listener  lifecycle_talker
ROS2/day4/hw1/hw1_package/install/simple_lifecycle_pkg/share/simple_lifecycle_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/day4/hw1/hw1_package/install/simple_lifecycle_pkg/share/simple_lifecycle_pkg/cmake/: simple_lifecycle_pkgConfig.cmake
ROS2/day4/hw1/hw1_package/src/: lifecycle_pub.cpp  lifecycle_sub.cpp
robit_intern_report/day1/hw1/: hw1.docx
(+7 files in other folders)
